crates/mun_compiler/src/snapshots/mun_compiler__diagnostics__tests__mismatched_type_error.snap
---
source: crates/mun_compiler/src/diagnostics.rs
expression: "compilation_errors(\"\\n\\nfn main() {\\nlet a: f64 = false;\\n\\nlet b: bool = 22;\\n}\")"
---
error: mismatched type
 --> main.mun:4:13
  |
4 | let a: f64 = false;
  |              ^^^^^ expected `f64`, found `bool`
  |
error: mismatched type
 --> main.mun:6:14
  |
6 | let b: bool = 22;
  |               ^^ expected `bool`, found `{integer}`
  |

